<?xml version="1.0"?>
<package format="2">
  <name>off_mission</name>
  <version>0.0.0</version>
  <description>The off_mission package designed for open pixhawk, developed in Aerotiger Ltd.cn
website: www.aerotiger.cn
All rights reserved
</description>

  <maintainer email="jqcui@qq.com">Jinqiang</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <depend>roscpp</depend>
  <depend>rospy</depend>

  <depend>mavlink</depend>
  <depend>mavros</depend>
  <depend>mavros_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>navigator</depend>

  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
